<resources>
    <string name="app_name">Car Track</string>

    <string name="login_fragment_label">Login Fragment</string>
    <string name="details_fragment_label">Details Fragment</string>
    <string name="signup_fragment_label">SignUP Fragment</string>
    <string name="login_button_label">Login</string>
    <string name="back_button_label">Back</string>
    <string name="fieldPassword">Enter Password</string>
    <string name="fieldUsername">Enter User Name</string>
    <string name="select_country">Select Country</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="signup_label">SIGNUP</string>
    <string name="signup_button_label">SignUP</string>
    <string name="createFieldUsername">Create User Name</string>
    <string name="createFieldPassword">Create Password</string>

    <!-- Validators -->

    <string name="infoValidator1">Enter between 8 and 16 alphanumeric characters.</string>
    <string name="infoValidator2">Must contain only alphabets and numbers</string>
</resources>