<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/LoginFragment">

    <fragment
        android:id="@+id/LoginFragment"
        android:name="com.demo.cartrack.LoginFragment"
        android:label="@string/login_fragment_label"
        tools:layout="@layout/fragment_login">

        <action
            android:id="@+id/action_LoginFragment_to_SignUPFragment"
            app:destination="@id/SignUPFragment" />

        <action
            android:id="@+id/action_LoginFragment_to_DetailsFragment"
            app:destination="@id/DetailsFragment" />
    </fragment>

    <fragment
        android:id="@+id/SignUPFragment"
        android:name="com.demo.cartrack.SignUPFragment"
        android:label="@string/signup_fragment_label"
        tools:layout="@layout/fragment_signup">

        <action
            android:id="@+id/action_SignupFragment_to_LoginFragment"
            app:destination="@id/LoginFragment" />

    </fragment>

    <fragment
        android:id="@+id/DetailsFragment"
        android:name="com.demo.cartrack.DetailsFragment"
        android:label="@string/details_fragment_label"
        tools:layout="@layout/fragment_details">

        <action
            android:id="@+id/action_DetailsFragment_to_LoginFragment"
            app:destination="@id/LoginFragment" />
    </fragment>
</navigation>