<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="@dimen/dp_16"
    android:layout_marginEnd="@dimen/dp_16">

    <LinearLayout
        android:id="@+id/formLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/createUserNameLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/createFieldUsername"
            android:labelFor="@+id/createUserName"
            app:hintTextAppearance="@style/TextAppearanceLabel"
            app:hintTextColor="@color/grey_dark">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/createUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:maxLength="160"
                android:maxLines="5"
                android:textAppearance="@style/TextAppearanceBody"
                android:textColor="@color/black" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/createPasswordLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/createFieldPassword"
            android:labelFor="@+id/editTextPassword"
            app:hintTextAppearance="@style/TextAppearanceLabel"
            app:hintTextColor="@color/grey_dark"
            app:layout_constraintTop_toBottomOf="@id/userNameLayout">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/createPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:maxLength="160"
                android:maxLines="5"
                android:textAppearance="@style/TextAppearanceBody"
                android:textColor="@color/black" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.demo.cartrack.component.CountryPickerComponent
            android:id="@+id/countryPicker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/dp_8"/>

    </LinearLayout>

    <Button
        android:id="@+id/btnSignup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signup_button_label"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/formLayout" />


</androidx.constraintlayout.widget.ConstraintLayout>